--- a/docs/src/styles/custom.css
+++ b/docs/src/styles/custom.css
@@ -11,8 +11,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 400;
-  font-family: "Inter", sans-serif !important;
 }
 
 h1 {
@@ -70,7 +68,8 @@ p, ul, li, ol, tr, td, summary, dl, dd {
   @media screen and (max-width: 450px) {
     font-size: 14px;
   }
-  letter-spacing: -0.01em;
+  letter-spacing: -0.01rem;
+  line-height: 1.5rem;
 }
 
 dt {
